Fix PersonalInfo spacing, fix conditional render

--- a/src/styles/PersonalInfo/ContactInfo.scss
+++ b/src/styles/PersonalInfo/ContactInfo.scss
@@ -18,3 +18,8 @@
 .phone {
     margin-bottom: 20px;
 }
+
+.contact-info-header {
+    font-size: 30px;
+    margin-bottom: 10px;
+}
